--- a/india/Readme
+++ b/india/Readme
@@ -1,3 +1,3 @@
 This folder is for India files only
 We need 
-indsims<-replicate(10000,autoind()) from this file...
+indsims<-replicate(10000,autoind()) from this folder...
